--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <hr class="mt-5 w-75" style="margin: 0 auto;">
             <div class="col-12 text-center mt-5">
                 <p class="text2" style="font-weight:300;">
-                   День рождение пройдет в формате мастер класса <br> по <u>гончарному искусству</u>
+                   День рождения пройдет в формате мастер класса <br> по <u>гончарному искусству</u>
                 </p>
             </div>
             <hr class="mt-5 w-75" style="margin: 0 auto;">
